# binhub

./: .gitignore  CMakeLists.txt  README.md  build-linux-clang.sh  build-linux-gcc.sh  build-windows-mingw.bat  build-windows-msvc.bat  setenv.c
.github/workflows/: ci.yaml
conf/: cpro_repl.config
docs/: UserGuideExample.md  list-windows.txt
lib/: CMakeLists.txt
lib/src/: binhub_io.c
libraries/include/: binhub_io.h  binhub_macro.h  binhub_rgb.h
libraries/src/: binhub_io.c  binhub_rgb.c
res/text/: EXE文件图标消失.txt  TestCodePage  WinR键被锁死解决办法.txt  WindowsMstsc远程连接.txt  manual  version  盲文字符
src/bash/: CMakeLists.txt  add-alias  del  gen-ssl-certificate  ifconfig  ipconfig  ll  md  mnt-vmhost  poweroff  reboot  restart-net  rvg++  rvgcc  sqlite  start
src/c_cpp/CodeRainEasyX/: CodeRain.cpp  build.bat
src/c_cpp/TurnOnRemoteDesktop/: CMakeLists.txt  Win7TurnOnRemote.c  win7_turn_on_remote.c
src/c_cpp/addc/: addc.cpp  build.py
src/c_cpp/ascii/: CMakeLists.txt  build.py  main.c
src/c_cpp/ascii/src/: main.c
src/c_cpp/baseconvert/: CMakeLists.txt  baseconvert.c  build.py
src/c_cpp/baseconvert/src/: main.c
src/c_cpp/binarytree/: CMakeLists.txt  binarytree.c  build.py
src/c_cpp/binarytree/src/: main.c
src/c_cpp/binhubenv/: binhub.c  build.py
src/c_cpp/chcolor/: CMakeLists.txt  build.bat  chcolor.c
src/c_cpp/chcolor/src/: main.c
src/c_cpp/copyleft/: CMakeLists.txt  SetCharacterEncode.c  build.py  main.c  main.h
src/c_cpp/copyleft/include/: main.h
src/c_cpp/copyleft/src/: main.c
src/c_cpp/cpro/: CMakeLists.txt
src/c_cpp/cpro/include/: resource.h
src/c_cpp/cpro/include/common/: gcc_option.h  gen_template.h  match_regex.h  memory_gcc_compiler.h  str.h  table.h  text_editor.h
src/c_cpp/cpro/include/mod_proj/: mod_proj.h
src/c_cpp/cpro/include/mod_repl/: memory_function.h  memory_header.h  memory_macro.h  memory_prog.h  memory_struct.h  memory_union.h  repl.h
src/c_cpp/cpro/include/mod_run/: handle_cmd_run.h  subprocess.h
src/c_cpp/cpro/include/mod_scaffold/: fixed_template.h  scaffold.h
src/c_cpp/cpro/include/mod_winres/: handle_cmd_winres.h  win_res.h
src/c_cpp/cpro/include/proj/: config_loader.h  help.h  proj_info.h
src/c_cpp/cpro/src/: main.cpp
src/c_cpp/cpro/src/common/: gcc_option.cpp  gen_template.cpp  match_regex.cpp  memory_gcc_compiler.cpp  str.cpp  table.cpp  text_editor.cpp
src/c_cpp/cpro/src/mod_proj/: mod_proj.cpp
src/c_cpp/cpro/src/mod_repl/: memory_function.cpp  memory_header.cpp  memory_macro.cpp  memory_prog.cpp  memory_struct.cpp  memory_union.cpp  repl.cpp
src/c_cpp/cpro/src/mod_run/: handle_cmd_run.cpp  subprocess.cpp
src/c_cpp/cpro/src/mod_scaffold/: fixed_template.cpp  scaffold.cpp
src/c_cpp/cpro/src/mod_winres/: handle_cmd_winres.cpp  win_res.cpp
src/c_cpp/cpro/src/proj/: config_loader.cpp  help.cpp  proj_info.cpp
src/c_cpp/crun/: CMakeLists.txt  readme.txt
src/c_cpp/crun/src/: config_loader.cpp  config_loader.h  crepl.cpp  crepl.h  exception.cpp  exception.h  main.cpp  match_regex.cpp  match_regex.h  prog.cpp  prog.h  safe_exit.cpp  safe_exit.h  slls_ext.cpp  slls_ext.h  str.cpp  str.h  subprocess.cpp  subprocess.h  use_template.cpp  use_template.h
src/c_cpp/crun/src/common/: ProjectCommon.cpp  ProjectCommon.h  SLLC.cpp  SLLC.h  SLLS.cpp  SLLS.h  info.cpp  info.h
src/c_cpp/cvtcolor/: CMakeLists.txt
src/c_cpp/cvtcolor/include/: conversion.h
src/c_cpp/cvtcolor/src/: main.cpp
src/c_cpp/digest/: CMakeLists.txt  HashUtils.cpp  build.bat  build.sh  main.cpp
src/c_cpp/digest/include/: hash_utils.h
src/c_cpp/digest/src/: hash_utils.cpp  main.cpp
src/c_cpp/hex2dec/: build.py  hex2dec.c
src/c_cpp/listcop/: build.py  listcop.c
src/c_cpp/pwdgen/: CMakeLists.txt  build.py  pwdgen.c
src/c_cpp/selfdel/: CMakeLists.txt  build.bat  selfdel.c
src/c_cpp/setenc/: CMakeLists.txt  main.cpp
src/c_cpp/setenv/: CMakeLists.txt  build.bat  setenv.c
src/c_cpp/setfileenc/: build.bat  setfileenc.cpp
src/c_cpp/setfiletime/: build.bat  setfiletime.c
src/c_cpp/setts/: CMakeLists.txt  setts.c
src/c_cpp/tellme/: CMakeLists.txt  build.bat  tellme.c
src/c_cpp/timer/: CMakeLists.txt  build.bat  timer.c
src/c_cpp/use/: CMakeLists.txt  build.py  use.cpp
src/c_cpp/viewfile/: CMakeLists.txt  SetCharacterEncode.h  build.bat  build.sh  color.h  main.c
src/cmd/: sha512sum.bat  slay.bat  winmgr.bat
src/python/: CMakeLists.txt  ChangeFileExtensionToPy.py  SetFileEncodingToUTF-8.py  StorageUnitConverter.py
src/vbs/: CortanaVoiceShutup.vbs
src/windows/: CMakeLists.txt  CortanaVoiceSpeak.vbs  binhubmanual.bat  chtime.ps1  event.bat  ifconfig.bat  ipconfig.vbs  ln.ps1  md2sum.bat  md4sum.bat  md5sum.bat  np.bat  poweroff.bat  reboot.bat  restartexplorer.bat  rm-rf.ps1  rm.bat  sandbox.bat  sha1sum.bat  sha256sum.bat  sha384sum.bat  timestamp.ps1  touch.bat  touch.ps1  which.ps1  white-cmd.bat
